nginx_vs_caddy_vs_traefik/nginx/k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-demo-service
spec:
  selector:
    app: lb-demo
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
